--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                         <a class="menu__link" href="#advantages-section">Преимущества шугаринга</a>
                     </li>
                     <li class="menu__list--item">
-                        <a class="menu__link" href="#areas-section">Зоны</a>
+                        <a class="menu__link" href="#areas-section">Наши услуги</a>
                     </li>
                     <li class="menu__list--item">
-                        <a class="menu__link" href="#clients-section">Мои клиенты</a>
+                        <a class="menu__link" href="#clients-section">Наши клиенты</a>
                     </li>
                 </ul>
                 <ul class="header__list">
@@ -60,10 +60,10 @@
                     <a class="mob-menu__link js-close-menu" href="#advantages-section">Преимущества шугаринга</a>
                 </li>
                 <li class="mob-menu__list--item">
-                    <a class="mob-menu__link js-close-menu" href="#areas-section">Зоны</a>
+                    <a class="mob-menu__link js-close-menu" href="#areas-section">Наши услуги</a>
                 </li>
                 <li class="mob-menu__list--item">
-                    <a class="mob-menu__link js-close-menu" href="#clients-section">Мои клиенты</a>
+                    <a class="mob-menu__link js-close-menu" href="#clients-section">Наши клиенты</a>
                 </li>
             </ul>
             <ul class="contact__list">
