--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             </div>
             <div class="footer__adress-container">
                 <address class="footer__adress">
-                    <p class="footer__text">Украина, г.Одесса, ул.Тираспольская 24</p>
+                    <p class="footer__text">Украина, г.Одесса, ул. Цветочная 32</p>
                 </address>
             </div>
             <div class="footer__social-container">
